--- a/style.css
+++ b/style.css
@@ -615,3 +615,157 @@ footer li{
 .tns-horizontal.tns-subpixel {
     white-space: normal;
 }
+
+/*events archive header*/
+
+.header {
+    width: 100%; 
+    height: 80px; 
+    display: #eae5e2; 
+    background-color: #eae5e2; 
+    position: fixed; 
+    z-index: 500; 
+}
+
+.sub-title {
+    margin-left: 6rem; 
+    padding-top: 1.5rem; 
+    font-size: 2em;
+    color: #D65043;
+    max-width: 70%;
+    font-family: "Fjalla One", serif;
+}
+
+/* time line */
+
+.time-line-box {
+    height: 100px; 
+    padding: 120px 0;
+    width: 100%;
+    background-color: #ffffff;
+  }
+  
+  .time-line-box .timeline {
+    list-style-type: none;
+    display: flex;
+    padding: 0;
+    text-align: center;
+  }
+  
+  .time-line-box .timestamp {
+    margin: auto;
+    margin-bottom: 5px;
+    padding: 0px 4px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .time-line-box .status {
+    padding: 0px 10px;
+    display: flex;
+    justify-content: center;
+    border-top: 3px solid #ff0000;
+    position: relative;
+    transition: all 200ms ease-in;
+  }
+  .time-line-box .status span {
+    padding-top: 8px;
+  }
+  .time-line-box .status span:before {
+    content: '';
+    width: 12px;
+    height: 12px;
+    background-color: #D65043;
+    border-radius: 12px;
+    border: 2px solid #D65043;
+    position: absolute;
+    left: 50%;
+    top: 0%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    transition: all 200ms ease-in;
+  }
+  
+  .swiper-container {
+    width: 95%; 
+    margin: auto;
+    overflow-y: auto;
+  }
+  .swiper-wrapper{
+    display: inline-flex;
+    flex-direction: row;
+    overflow-y:auto;
+    justify-content: center;
+  }
+  .swiper-container::-webkit-scrollbar-track{
+     background:#a8a8a8b6;
+  }
+  .swiper-container::-webkit-scrollbar{
+    height: 2px;
+  }
+  .swiper-container::-webkit-scrollbar-thumb{
+     background: #4F4F4F !important;
+  }
+  .swiper-slide {
+    text-align: center;
+    font-size: 12px;
+    width: 200px;
+    height: 100%;
+    position: relative;
+  }
+
+.row-one {
+    margin: 3rem;
+    padding-top: 2rem; 
+    padding-left: 2rem; 
+    display: flex; 
+    flex-direction: row;
+    justify-content: space-evenly; 
+    align-items: center; 
+    gap: 20px; 
+}
+.second-event {
+    padding-left: 3rem; 
+    width: 100%; 
+    height: auto; 
+    max-width: 500px; 
+}
+
+.third-event {
+    align-items: center; 
+    display: inline-block;
+    flex-direction: column;
+    align-items: center;
+}
+
+.picture-one {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 20rem;
+    height: auto;
+    padding-top: 1rem; 
+    display: inline-block; 
+}
+
+.picture-four {
+    max-width: 100%; 
+    height: auto;
+    margin-bottom: 1rem; 
+}
+
+.picture-five {
+    max-width: 100%; 
+    height: auto;
+}
+
+.events {
+    margin: 3rem; 
+}
+
+.text-one {
+    padding-left: 20rem; 
+}
+
